Fix clipping of .navbar-primary dropdowns in Safari

--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -37,6 +37,11 @@
   overflow: hidden;
   @include transition($transition-collapse-all);
 
+  // test for Safari
+  @media (-webkit-animation) {
+    overflow: visible; // Safari
+  }
+
   * {
     flex-shrink: 0;
     align-items: normal;
